--- a/test-deploy.yaml
+++ b/test-deploy.yaml
@@ -6,6 +6,9 @@ metadata:
     app: petclinic
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: petclinic
   template:
     metadata:
       labels:
