--- a/kb-podTemplate.yaml
+++ b/kb-podTemplate.yaml
@@ -26,4 +26,4 @@ spec:
 #        - name: kaniko-secret
 #          secret:
 #            secretName: kaniko-secret
-    serviceAccount: staging:default
+    serviceAccount: jenkins
