deploy yaml selector

--- a/test-deploy.yaml
+++ b/test-deploy.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      run: petclinic
+      app: petclinic
   template:
     metadata:
       labels:
